--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.10.2",
     "sequelize": "^6.37.3",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "uuid": "^10.0.0"
   }
 }
